--- a/Features/Standings/StandingsTableView.xaml
+++ b/Features/Standings/StandingsTableView.xaml
@@ -14,7 +14,7 @@
               ItemsSource="{Binding Standings}">
     <ItemsControl.ItemTemplate>
         <DataTemplate>
-            <Border Style="{DynamicResource Styles.HoverableBorder}"
+            <Border Style="{DynamicResource Styles.Border.Hoverable}"
                     Margin="{adonisUi:Space 1, 0.2}"
                     Padding="{adonisUi:Space 1, 1}"
                     MouseLeftButtonDown="{s:Action OpenWiki}"
