--- a/Styles/Border.xaml
+++ b/Styles/Border.xaml
@@ -1,8 +1,25 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI">
+    <Style TargetType="Border" x:Key="Styles.Border.Separator">
+        <Setter Property="Background" Value="{DynamicResource {x:Static adonisUi:Brushes.Layer1BorderBrush}}"/>
+    </Style>
+    <Style TargetType="Border" x:Key="Styles.Border.Separator.Vertical" BasedOn="{StaticResource Styles.Border.Separator}">
+        <Setter Property="Width" Value="1"/>
+        <Setter Property="Margin" Value="{adonisUi:Space 0, 1}"/>
+    </Style>
+    <Style TargetType="Border" x:Key="Styles.Border.Separator.Horizontal" BasedOn="{StaticResource Styles.Border.Separator}">
+        <Setter Property="Height" Value="1"/>
+        <Setter Property="Margin" Value="{adonisUi:Space 1, 0}"/>
+    </Style>
+    <Style TargetType="Border" x:Key="Styles.Border.Toolbar">
+        <Setter Property="Background" Value="{DynamicResource {x:Static adonisUi:Brushes.AccentBrush}}" />
+        <Setter Property="CornerRadius" Value="0 8 8 0" />
+        <Setter Property="Margin" Value="{adonisUi:Space 1, 1}" />
+        <Setter Property="Padding" Value="0 0 16 0" />
+    </Style>
     <Style TargetType="Border"
-           x:Key="Styles.HoverableBorder.NoInteraction">
+           x:Key="Styles.Border.Hoverable.NoInteraction">
         <Setter Property="CornerRadius" Value="0 8 8 0" />
         <Setter Property="BorderThickness" Value="4 0 0 0" />
         <Setter Property="Background" Value="{DynamicResource {x:Static adonisUi:Brushes.Layer1BackgroundBrush}}" />
@@ -15,8 +32,8 @@
         </Style.Triggers>
     </Style>
     <Style TargetType="Border"
-           x:Key="Styles.HoverableBorder"
-           BasedOn="{StaticResource Styles.HoverableBorder.NoInteraction}">
+           x:Key="Styles.Border.Hoverable"
+           BasedOn="{StaticResource Styles.Border.Hoverable.NoInteraction}">
         <Setter Property="Cursor" Value="Hand" />
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
