--- a/Styles/ListBoxItem.xaml
+++ b/Styles/ListBoxItem.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI">
-    <Style x:Key="Styles.NavigationListBoxItem" TargetType="ListBoxItem"
+    <Style x:Key="Styles.ListBoxItem.Navigation" TargetType="ListBoxItem"
            BasedOn="{StaticResource {x:Type ListBoxItem}}">
         <Setter Property="BorderThickness" Value="0" />
         <Setter Property="BorderBrush" Value="{DynamicResource {x:Static adonisUi:Brushes.AccentBrush}}" />
