--- a/Styles/TextBlock.xaml
+++ b/Styles/TextBlock.xaml
@@ -5,7 +5,7 @@
                     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                     xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
                     mc:Ignorable="d">
-    <Style x:Key="Styles.HighlightableTextBlock"
+    <Style x:Key="Styles.TextBlock.Highlightable"
            TargetType="controls:HighlightableTextBlock">
         <Setter Property="Template">
             <Setter.Value>
