Fixed standings table text clipping issue with minor layout change.

--- a/Features/Standings/StandingsRootView.xaml
+++ b/Features/Standings/StandingsRootView.xaml
@@ -20,8 +20,8 @@
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition />
-                <ColumnDefinition />
+                <ColumnDefinition Width="12*"/>
+                <ColumnDefinition Width="9*"/>
             </Grid.ColumnDefinitions>
             <Grid.Resources>
                 <Style TargetType="TextBlock" x:Key="HeaderStyle">
