--- a/Features/Standings/StandingsTableView.xaml
+++ b/Features/Standings/StandingsTableView.xaml
@@ -14,6 +14,11 @@
               ItemsSource="{Binding Standings}">
     <ItemsControl.ItemTemplate>
         <DataTemplate>
+            <DataTemplate.Resources>
+                <Style TargetType="TextBlock">
+                    <Setter Property="VerticalAlignment" Value="Center"/>
+                </Style>
+            </DataTemplate.Resources>
             <Border Style="{DynamicResource Styles.Border.Hoverable}"
                     Margin="{adonisUi:Space 1, 0.2}"
                     Padding="{adonisUi:Space 1, 1}"
@@ -24,7 +29,7 @@
                         <ColumnDefinition Width="Auto" MinWidth="{adonisUi:Space 3}" />
                         <ColumnDefinition Width="Auto" MinWidth="{adonisUi:Space 4}" />
                         <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="Auto" />
                         <ColumnDefinition Width="Auto" MinWidth="{adonisUi:Space 4}"/>
                         <ColumnDefinition Width="Auto" MinWidth="{adonisUi:Space 4}" />
                     </Grid.ColumnDefinitions>
