--- a/Features/Debug/DebugWindowView.xaml
+++ b/Features/Debug/DebugWindowView.xaml
@@ -1,29 +1,32 @@
-﻿<controls:AdonisWindow x:Class="F1Desktop.Features.Debug.DebugWindowView"
-                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                       xmlns:local="clr-namespace:F1Desktop.Features.Debug"
-                       xmlns:controls="clr-namespace:AdonisUI.Controls;assembly=AdonisUI"
-                       xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
-                       xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
-                       xmlns:s="https://github.com/canton7/Stylet"
-                       mc:Ignorable="d"
-                       d:DataContext="{d:DesignInstance local:DebugWindowViewModel}"
-                       Height="450"
-                       Width="800"
-                       PlaceTitleBarOverContent="True"
-                       IconVisibility="Collapsed"
-                       TitleVisibility="Collapsed"
-                       FontFamily="{StaticResource F1Font}">
-    <controls:AdonisWindow.TitleBarContent>
+﻿<controls1:ArmouredAdonisWindow x:Class="F1Desktop.Features.Debug.DebugWindowView"
+                                xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                                xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                                xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                                xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                                xmlns:local="clr-namespace:F1Desktop.Features.Debug"
+                                xmlns:controls="clr-namespace:AdonisUI.Controls;assembly=AdonisUI"
+                                xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
+                                xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+                                xmlns:s="https://github.com/canton7/Stylet"
+                                xmlns:controls1="clr-namespace:F1Desktop.Controls"
+                                mc:Ignorable="d"
+                                d:DataContext="{d:DesignInstance local:DebugWindowViewModel}"
+                                Height="450"
+                                Width="800"
+                                PlaceTitleBarOverContent="True"
+                                IconVisibility="Collapsed"
+                                TitleVisibility="Collapsed"
+                                ResizeMode="NoResize"
+                                FontFamily="{StaticResource F1Font}">
+    <controls1:ArmouredAdonisWindow.TitleBarContent>
         <Grid Height="{adonisUi:Space 3}">
         </Grid>
-    </controls:AdonisWindow.TitleBarContent>
+    </controls1:ArmouredAdonisWindow.TitleBarContent>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="{Binding TitleBarActualHeight, RelativeSource={RelativeSource AncestorType={x:Type controls:AdonisWindow}}}"/>
-            <RowDefinition/>
+            <RowDefinition
+                Height="{Binding TitleBarActualHeight, RelativeSource={RelativeSource AncestorType={x:Type controls:AdonisWindow}}}" />
+            <RowDefinition />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" MinWidth="{adonisUi:Space 20}" />
@@ -57,6 +60,6 @@
                 </ListBox.ItemTemplate>
             </ListBox>
         </Border>
-        <ContentControl Grid.Column="1" Grid.Row="1" s:View.Model="{Binding ActiveItem}" Margin="{adonisUi:Space 1,0}"/>
+        <ContentControl Grid.Column="1" Grid.Row="1" s:View.Model="{Binding ActiveItem}" Margin="{adonisUi:Space 1,0}" />
     </Grid>
-</controls:AdonisWindow>
+</controls1:ArmouredAdonisWindow>
