--- a/Features/Root/FirstRunWindowView.xaml
+++ b/Features/Root/FirstRunWindowView.xaml
@@ -1,19 +1,19 @@
-﻿<controls:AdonisWindow x:Class="F1Desktop.Features.Root.FirstRunWindowView"
-                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                       xmlns:local="clr-namespace:F1Desktop.Features.Root"
-                       xmlns:controls="clr-namespace:AdonisUI.Controls;assembly=AdonisUI"
-                       xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
-                       xmlns:s="https://github.com/canton7/Stylet"
-                       mc:Ignorable="d"
-                       d:DataContext="{d:DesignInstance local:FirstRunWindowViewModel}"
-                       Width="400"
-                       Height="400"
-                       ResizeMode="NoResize"
-                       WindowStyle="None"
-                       Deactivated="{s:Action OnDeactivated}">
+﻿<controls1:ArmouredAdonisWindow x:Class="F1Desktop.Features.Root.FirstRunWindowView"
+                                xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                                xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                                xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                                xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                                xmlns:local="clr-namespace:F1Desktop.Features.Root"
+                                xmlns:controls="clr-namespace:AdonisUI.Controls;assembly=AdonisUI"
+                                xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
+                                xmlns:s="https://github.com/canton7/Stylet"
+                                xmlns:controls1="clr-namespace:F1Desktop.Controls"
+                                mc:Ignorable="d"
+                                d:DataContext="{d:DesignInstance local:FirstRunWindowViewModel}"
+                                Width="400"
+                                Height="400"
+                                ResizeMode="NoResize"
+                                WindowStyle="None">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
@@ -65,4 +65,4 @@
                     Command="{s:Action Accept}" />
         </StackPanel>
     </Grid>
-</controls:AdonisWindow>
+</controls1:ArmouredAdonisWindow>
